--- a/Analisis_2.ipynb
+++ b/Analisis_2.ipynb
@@ -2337,7 +2337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('lombaDAC')",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2351,12 +2351,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a57403f834cd2276d6f4405021a2207bf2f5ca770e773b9f5e63bed1fd0ba9cf"
+    "hash": "3709a11f480f99117312a1794fd96c0a85ca08853653a6995f348b832547d6ae"
    }
   }
  },
