--- a/Analisis_2.ipynb
+++ b/Analisis_2.ipynb
@@ -5640,15 +5640,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import sklearn\n",
     "\n",
     "parameters_KNN = {\n",
-    "    'n_neighbors': (1,10, 1),\n",
-    "    'leaf_size': (20,40,1),\n",
+    "    'n_neighbors': (1,100, 5),\n",
+    "    'leaf_size': (20,60,5),\n",
     "    'p': (1,2),\n",
     "    'weights': ('uniform', 'distance'),\n",
     "    'metric': ('minkowski', 'chebyshev'),\n",
@@ -5656,7 +5657,422 @@
     "\n",
     "\n",
     "\n",
-    "sklearn.model_selection.GridSearchCV(KNeighborsClassifier,)"
+    "model=sklearn.model_selection.GridSearchCV(KNeighborsClassifier(),param_grid=parameters_KNN,scoring = 'accuracy', n_jobs = -1,cv = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10, estimator=KNeighborsClassifier(), n_jobs=-1,\n",
+       "             param_grid={'leaf_size': (20, 60, 5),\n",
+       "                         'metric': ('minkowski', 'chebyshev'),\n",
+       "                         'n_neighbors': (1, 100, 5), 'p': (1, 2),\n",
+       "                         'weights': ('uniform', 'distance')},\n",
+       "             scoring='accuracy')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x.values,y.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'leaf_size': 60,\n",
+       " 'metric': 'chebyshev',\n",
+       " 'n_neighbors': 5,\n",
+       " 'p': 1,\n",
+       " 'weights': 'distance'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.best_params_ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.20506714626794587"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29/29 [00:17<00:00,  1.65it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Balanced Accuracy</th>\n",
+       "      <th>ROC AUC</th>\n",
+       "      <th>F1 Score</th>\n",
+       "      <th>Time Taken</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ExtraTreeClassifier</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdaBoostClassifier</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LabelSpreading</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LabelPropagation</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Perceptron</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PassiveAggressiveClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DecisionTreeClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ExtraTreesClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BaggingClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DummyClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeClassifierCV</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinearSVC</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QuadraticDiscriminantAnalysis</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NearestCentroid</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LinearDiscriminantAnalysis</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVC</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>2.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LGBMClassifier</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CalibratedClassifierCV</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>2.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NuSVC</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>3.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GaussianNB</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BernoulliNB</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBClassifier</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>1.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNeighborsClassifier</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SGDClassifier</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Accuracy  Balanced Accuracy ROC AUC  F1 Score  \\\n",
+       "Model                                                                          \n",
+       "ExtraTreeClassifier                0.21               0.21    None      0.21   \n",
+       "AdaBoostClassifier                 0.21               0.21    None      0.21   \n",
+       "LabelSpreading                     0.21               0.21    None      0.21   \n",
+       "LabelPropagation                   0.21               0.21    None      0.21   \n",
+       "Perceptron                         0.21               0.21    None      0.19   \n",
+       "PassiveAggressiveClassifier        0.20               0.20    None      0.20   \n",
+       "DecisionTreeClassifier             0.20               0.20    None      0.20   \n",
+       "ExtraTreesClassifier               0.20               0.20    None      0.20   \n",
+       "BaggingClassifier                  0.20               0.20    None      0.20   \n",
+       "DummyClassifier                    0.20               0.20    None      0.07   \n",
+       "RidgeClassifierCV                  0.20               0.20    None      0.19   \n",
+       "RidgeClassifier                    0.20               0.20    None      0.19   \n",
+       "LinearSVC                          0.20               0.20    None      0.19   \n",
+       "QuadraticDiscriminantAnalysis      0.20               0.20    None      0.20   \n",
+       "NearestCentroid                    0.20               0.20    None      0.20   \n",
+       "LinearDiscriminantAnalysis         0.20               0.20    None      0.19   \n",
+       "RandomForestClassifier             0.20               0.20    None      0.20   \n",
+       "LogisticRegression                 0.20               0.20    None      0.19   \n",
+       "SVC                                0.20               0.20    None      0.19   \n",
+       "LGBMClassifier                     0.20               0.20    None      0.20   \n",
+       "CalibratedClassifierCV             0.20               0.20    None      0.12   \n",
+       "NuSVC                              0.20               0.20    None      0.19   \n",
+       "GaussianNB                         0.19               0.19    None      0.19   \n",
+       "BernoulliNB                        0.19               0.19    None      0.19   \n",
+       "XGBClassifier                      0.19               0.19    None      0.19   \n",
+       "KNeighborsClassifier               0.19               0.19    None      0.19   \n",
+       "SGDClassifier                      0.19               0.19    None      0.19   \n",
+       "\n",
+       "                               Time Taken  \n",
+       "Model                                      \n",
+       "ExtraTreeClassifier                  0.02  \n",
+       "AdaBoostClassifier                   0.34  \n",
+       "LabelSpreading                       1.69  \n",
+       "LabelPropagation                     1.27  \n",
+       "Perceptron                           0.02  \n",
+       "PassiveAggressiveClassifier          0.04  \n",
+       "DecisionTreeClassifier               0.07  \n",
+       "ExtraTreesClassifier                 0.61  \n",
+       "BaggingClassifier                    0.35  \n",
+       "DummyClassifier                      0.01  \n",
+       "RidgeClassifierCV                    0.02  \n",
+       "RidgeClassifier                      0.03  \n",
+       "LinearSVC                            0.64  \n",
+       "QuadraticDiscriminantAnalysis        0.02  \n",
+       "NearestCentroid                      0.01  \n",
+       "LinearDiscriminantAnalysis           0.03  \n",
+       "RandomForestClassifier               0.95  \n",
+       "LogisticRegression                   0.03  \n",
+       "SVC                                  2.66  \n",
+       "LGBMClassifier                       0.31  \n",
+       "CalibratedClassifierCV               2.34  \n",
+       "NuSVC                                3.64  \n",
+       "GaussianNB                           0.01  \n",
+       "BernoulliNB                          0.02  \n",
+       "XGBClassifier                        1.61  \n",
+       "KNeighborsClassifier                 0.66  \n",
+       "SGDClassifier                        0.13  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from lazypredict.Supervised import LazyClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y,test_size=.5,random_state =123)\n",
+    "clf = LazyClassifier(verbose=0,ignore_warnings=True, custom_metric=None)\n",
+    "models,predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
+    "models"
    ]
   }
  ],
